--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form>
+    <form class="search-form">
       <input
         class="search-input"
         type="text"
@@ -20,6 +20,7 @@
     <div class="loader"></div>
 
     <ul class="search-list"></ul>
+    <button class="load-more-btn" type="submit">Load more images</button>
   </body>
   <script src="./main.js" type="module"></script>
 </html>
